# skills

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SKILL-SPEC.md
packs/aec-generation/: .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml
packs/aec-generation/aec-building/: SKILL.md
packs/aec-generation/aec-compliance-checklist/: SKILL.md
packs/aec-generation/aec-compliance-checklist/references/: accessibility-checklist.md  civil-defense-checklist.md  code-versions.md  disclaimer-template.md  fire-safety-checklist.md  green-building-checklist.md
packs/aec-generation/aec-dwg-dxf/: SKILL.md
packs/aec-generation/aec-dwg-dxf/references/: ezdxf-cookbook.md  layer-standards.yaml  titleblock-conventions.md
packs/aec-generation/aec-dwg-dxf/scripts/: README.md  _common.py  _make_sample.py  batch_rename.py  check_layers.py  extract_titleblock.py  generate_index.py  geom_summary.py  query_blocks.py  sample.dxf
packs/aec-generation/aec-ifc-parser/: SKILL.md
packs/aec-generation/aec-ifc-parser/references/: common-psets.md  ifcopenshell-cookbook.md  qa-checklist.yaml
packs/aec-generation/aec-ifc-parser/scripts/: README.md  _common.py  _make_sample.py  extract_by_type.py  model_diff.py  qa_check.py  query_pset.py  (+4 more)
packs/aec-generation/aec-project-docs/: SKILL.md
packs/aec-generation/aec-spec-writer/: SKILL.md
packs/aec-generation/reference/: market_al_danube.glb  procedural_asian_architecture_test_9.glb
templates/skill-pack/: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
(+203 files in other folders)
